--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,7 +25,7 @@
 				<div class="media">
 					<div class="media-left media-middle">
 						<a href="{{photo.link}}" target="_blank">
-							<img class="media-object" src={{photo.url}} />
+							<img class="media-object feed-img" src={{photo.url}} />
 						</a>
 						Taken: {{photo.humanReadableDate}}<br>
 						By: <a href={{photo.ownerurl}} target="_blank">{{photo.owner.username}}</a><br>
@@ -48,13 +48,17 @@
 			{{/each}}
 		</ul>
 	{{else}}
-		<div class="jumbotron">
-			<h1>[app-name]</h1>
-			<p>Created by [yourname]</p>
-			<p>Click one of the popular flickr tags below or search one above:</p>
-			{{#each tag in tagList}}
-				<button class="btn btn-info tag-button" {{action "clicktag" tag}}>{{tag}}</button>
-			{{/each}}
-		</div>
+		{{#if loading}}
+			<img src="../page-loading.gif" class="img-responsive center-block"/>
+		{{else}}
+			<div class="jumbotron">
+				<h1>[app-name]</h1>
+				<p>Created by [yourname]</p>
+				<p>Click one of the popular flickr tags below or search one above:</p>
+				{{#each tag in tagList}}
+					<button class="btn btn-info btn-small tag-button" {{action "clicktag" tag}}>#{{tag}}</button>
+				{{/each}}
+			</div>
+		{{/if}}
 	{{/if}}
 </div>
