--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,37 +18,36 @@
 	</div>
 </nav>
 <div class="container">
-	{{#if filteredPhotos}}
+	{{#liquid-if filteredPhotosLoaded use="toDown"}}
 		<ul class="list-group">
 			{{#each photo in filteredPhotos}}
-			<li class="list-group-item">
-				<div class="media">
-					<div class="media-left media-middle">
-						<a href="{{photo.link}}" target="_blank">
-							<img class="media-object feed-img" src={{photo.url}} />
-						</a>
-						Taken: {{photo.humanReadableDate}}<br>
-						By: <a href={{photo.ownerurl}} target="_blank">{{photo.owner.username}}</a><br>
+				<li class="list-group-item">
+					<div class="media">
+						<div class="media-left media-middle">
+							{{light-box href=photo.url data-lightbox=photo.id data-title=photo.title
+								data-class="media-object feed-img"}}
+							Taken: <a href={{photo.link}}>{{photo.humanReadableDate}}<br></a>
+							By: <a href={{photo.ownerurl}} target="_blank">{{photo.owner.username}}</a><br>
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">{{photo.title}} ({{photo.views}} Views)</h4>
+							{{{photo.description}}}
+						</div>
 					</div>
-					<div class="media-body">
-						<h4 class="media-heading">{{photo.title}} ({{photo.views}} Views)</h4>
-						{{{photo.description}}}
+					<br>
+					<div class="row">
+						<div class="col-md-1 col-xs-1 col-sm-1">Tags:</div>
+						<div class="col-md-11 col-xs-11 col-sm-11">
+							{{#each tag in photo.tags}}
+								<button class="btn btn-info btn-xs post-tag-button" {{action "clicktag" tag}}>#{{tag}}</button> 
+							{{/each}}
+						</div>
 					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-md-1 col-xs-1 col-sm-1">Tags:</div>
-					<div class="col-md-11 col-xs-11 col-sm-11">
-						{{#each tag in photo.tags}}
-							<button class="btn btn-info btn-xs post-tag-button" {{action "clicktag" tag}}>#{{tag}}</button> 
-						{{/each}}
-					</div>
-				</div>
-			</li>
+				</li>
 			{{/each}}
 		</ul>
-	{{else}}
-		{{#if loading}}
+{{else}}
+		{{#liquid-if loading use="toDown"}}
 			<img src="../page-loading.gif" class="img-responsive center-block"/>
 		{{else}}
 			<div class="jumbotron">
@@ -59,6 +58,6 @@
 					<button class="btn btn-info btn-small tag-button" {{action "clicktag" tag}}>#{{tag}}</button>
 				{{/each}}
 			</div>
-		{{/if}}
-	{{/if}}
+		{{/liquid-if}}
+	{{/liquid-if}}
 </div>
