--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,6 +13,18 @@
 				<button type="submit" class="btn btn-default">
 					<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 				</button>
+
+				{{#if session.isAuthenticated}}
+    				<button class="btn btn-default" {{action 'invalidateSession'}}>Logout
+    					<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+    				</button>
+				{{else}}
+    				<button class="btn btn-default" {{action 'facebookLogin'}}>Login with Facebook
+    					<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+    				</button>  
+				{{/if}}
+
+
 			{{/bs-form}}
 		</div>
 	</div>
