--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,11 +9,12 @@
 				{{#if filteredPhotos}}
 					{{bs-input type="text" value=searchField placeholder="filter photos"}}
 				{{/if}}
-				{{bs-input type="text" value=tagSearchField action="search" placeholder="search for a flickr tag"}}
-				<button type="submit" class="btn btn-default">
-					<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-				</button>
-
+				{{#if session.isAuthenticated}}
+					{{bs-input type="text" value=tagSearchField action="search" placeholder="search for a flickr tag"}}
+					<button type="submit" class="btn btn-default">
+						<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					</button>
+				{{/if}}
 				{{#if session.isAuthenticated}}
     				<button class="btn btn-default" {{action 'invalidateSession'}}>Logout
     					<span class="glyphicon glyphicon-off" aria-hidden="true"></span>
