Added App title and Author

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -51,7 +51,7 @@
 			<img src="../page-loading.gif" class="img-responsive center-block"/>
 		{{else}}
 			<div class="jumbotron">
-				<h1>Amazingly Authenticated Searcher of the Flickr</h1>
+				<h1>Amazingly Authenticated Searcher of the Flickr!</h1>
 				<p>Created by Jeris Rue</p>
 				<p>Click one of the popular flickr tags below or search one above:</p>
 				{{#each tag in tagList}}
